--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -122,4 +122,22 @@
     <value>..\scr.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
     <comment>Icon for App</comment>
   </data>
+  <data name="arrow_type01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\arrow_type01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="arrow_type02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\arrow_type02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="arrow_type03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\arrow_type03.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="arrow_type04" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\arrow_type04.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="menu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\menu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scr" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\scr.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
